client/src/styles/components/tooltip.scss
@use "../colors.scss" as *;

.tooltip_container {
  position: absolute;
  width: 350px;
  display: flex;
  gap: 1rem;
  background: var(--tooltip-bg);
  border-radius: 6px;
  padding: 1rem;
  z-index: 1;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
}

.tooltip_container.tooltip-right {
  left: 98.5%;
  top: 7.5px;
}

.tooltip_container.tooltip-left {
  right: 20%;
  top: 7.5px;
}

.tooltip_container.tooltip-bottom {
  top: 15%;
  left: 50%;
  transform: translateX(-50%);
}

.info-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  flex-grow: 1;
}

.description-title,
.features-title {
  font-weight: bold;
  font-size: 0.75rem;
  margin-bottom: 0.25rem;
}

.description-text {
  font-size: 0.75rem;
  color: #444;
  line-height: 1.4;
}

.feature-list {
  display: flex;
  flex-direction: column;
  gap: 0.3rem;
}

.feature-row {
  display: grid;
  grid-template-columns: 75px 1fr;
  column-gap: 0.5rem;
  font-size: 0.75rem;
  align-items: start;
}

.feature-key {
  font-weight: 500;
  color: #222;
  font-size: 0.75rem;
  white-space: nowrap;
}

.feature-value {
  color: #555;
  font-size: 0.75rem;
  word-break: break-word;
  text-align: left;
}

